--- a/index.html
+++ b/index.html
@@ -77,49 +77,49 @@
                 </p>
                 <ul class="space-y-3">
                     <li class="file-item">
-                        <div class="thumbnail-placeholder w-16 h-16 text-gray-500 rounded-md flex-shrink-0">📦</div>
+                        <img src="./6BFCC4DD-AF88-4B94-BEB8-5BD851C4E30C.png" alt="6BFCC4DD-AF88-4B94-BEB8-5BD851C4E30C Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
                         <a href="./6BFCC4DD-AF88-4B94-BEB8-5BD851C4E30C.usdz" download="6BFCC4DD-AF88-4B94-BEB8-5BD851C4E30C.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
                             6BFCC4DD-AF88-4B94-BEB8-5BD851C4E30C.usdz
                         </a>
                         <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
                     </li>
                     <li class="file-item">
-                        <div class="thumbnail-placeholder w-16 h-16 text-gray-500 rounded-md flex-shrink-0">📦</div>
+                        <img src="./7E7ACCFF-A795-4C25-A72D-A1B00686ECB0.png" alt="7E7ACCFF-A795-4C25-A72D-A1B00686ECB0 Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
                         <a href="./7E7ACCFF-A795-4C25-A72D-A1B00686ECB0.usdz" download="7E7ACCFF-A795-4C25-A72D-A1B00686ECB0.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
                             7E7ACCFF-A795-4C25-A72D-A1B00686ECB0.usdz
                         </a>
                         <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
                     </li>
                     <li class="file-item">
-                        <div class="thumbnail-placeholder w-16 h-16 text-gray-500 rounded-md flex-shrink-0">📦</div>
+                        <img src="./A70FD8CE-E369-4652-A7AD-18B91FD431DD.png" alt="A70FD8CE-E369-4652-A7AD-18B91FD431DD Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
                         <a href="./A70FD8CE-E369-4652-A7AD-18B91FD431DD.usdz" download="A70FD8CE-E369-4652-A7AD-18B91FD431DD.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
                             A70FD8CE-E369-4652-A7AD-18B91FD431DD.usdz
                         </a>
                         <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
                     </li>
                     <li class="file-item">
-                        <div class="thumbnail-placeholder w-16 h-16 text-gray-500 rounded-md flex-shrink-0">📦</div>
+                        <img src="./C4CAAC50-E97D-4EC0-A9D2-AA37A7D27093.png" alt="C4CAAC50-E97D-4EC0-A9D2-AA37A7D27093 Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
                         <a href="./C4CAAC50-E97D-4EC0-A9D2-AA37A7D27093.usdz" download="C4CAAC50-E97D-4EC0-A9D2-AA37A7D27093.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
                             C4CAAC50-E97D-4EC0-A9D2-AA37A7D27093.usdz
                         </a>
                         <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
                     </li>
                     <li class="file-item">
-                        <div class="thumbnail-placeholder w-16 h-16 text-gray-500 rounded-md flex-shrink-0">📦</div>
+                        <img src="./CB58E600-A82A-459C-A2B7-F740AA11E341.png" alt="CB58E600-A82A-459C-A2B7-F740AA11E341 Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
                         <a href="./CB58E600-A82A-459C-A2B7-F740AA11E341.usdz" download="CB58E600-A82A-459C-A2B7-F740AA11E341.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
                             CB58E600-A82A-459C-A2B7-F740AA11E341.usdz
                         </a>
                         <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
                     </li>
                     <li class="file-item">
-                        <div class="thumbnail-placeholder w-16 h-16 text-gray-500 rounded-md flex-shrink-0">📦</div>
+                        <img src="./corner%20sink2.png" alt="corner sink2 Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
                         <a href="./corner%20sink2.usdz" download="corner sink2.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
                             corner sink2.usdz
                         </a>
                         <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
                     </li>
                     <li class="file-item">
-                        <div class="thumbnail-placeholder w-16 h-16 text-gray-500 rounded-md flex-shrink-0">📦</div>
+                        <img src="./oblong%20sink2.png" alt="oblong sink2 Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
                         <a href="./oblong%20sink2.usdz" download="oblong sink2.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
                             oblong sink2.usdz
                         </a>
@@ -133,7 +133,7 @@
                         <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
                     </li>
                     <li class="file-item">
-                        <div class="thumbnail-placeholder w-16 h-16 text-gray-500 rounded-md flex-shrink-0">📦</div>
+                        <img src="./tank2.png" alt="tank2 Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
                         <a href="./tank2.usdz" download="tank2.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
                             tank2.usdz
                         </a>
@@ -147,35 +147,35 @@
                         <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
                     </li>
                     <li class="file-item">
-                        <div class="thumbnail-placeholder w-16 h-16 text-gray-500 rounded-md flex-shrink-0">📦</div>
+                        <img src="./toliet2%203.png" alt="toliet2 3 Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
                         <a href="./toliet2%203.usdz" download="toliet2 3.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
                             toliet2 3.usdz
                         </a>
                         <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
                     </li>
                     <li class="file-item">
-                        <div class="thumbnail-placeholder w-16 h-16 text-gray-500 rounded-md flex-shrink-0">📦</div>
+                        <img src="./w67b%20106%20all%20w%20walls%202.png" alt="w67b 106 all w walls 2 Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
                         <a href="./w67b%20106%20all%20w%20walls%202.usdz" download="w67b 106 all w walls 2.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
                             w67b 106 all w walls 2.usdz
                         </a>
                         <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
                     </li>
                     <li class="file-item">
-                        <div class="thumbnail-placeholder w-16 h-16 text-gray-500 rounded-md flex-shrink-0">📦</div>
+                        <img src="./w67b%20106%20all%20w%20walls%20and%20me%202.png" alt="w67b 106 all w walls and me 2 Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
                         <a href="./w67b%20106%20all%20w%20walls%20and%20me%202.usdz" download="w67b 106 all w walls and me 2.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
                             w67b 106 all w walls and me 2.usdz
                         </a>
                         <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
                     </li>
                     <li class="file-item">
-                        <div class="thumbnail-placeholder w-16 h-16 text-gray-500 rounded-md flex-shrink-0">📦</div>
+                        <img src="./w67b%20106%20bed%20and%20me.png" alt="w67b 106 bed and me Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
                         <a href="./w67b%20106%20bed%20and%20me.usdz" download="w67b 106 bed and me.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
                             w67b 106 bed and me.usdz
                         </a>
                         <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
                     </li>
                     <li class="file-item">
-                        <div class="thumbnail-placeholder w-16 h-16 text-gray-500 rounded-md flex-shrink-0">📦</div>
+                        <img src="./wastemaster2.png" alt="wastemaster2 Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
                         <a href="./wastemaster2.usdz" download="wastemaster2.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
                             wastemaster2.usdz
                         </a>
