--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
                     </li>
                     <li class="file-item">
-                        <div class="thumbnail-placeholder w-16 h-16 text-gray-500 rounded-md flex-shrink-0">📦</div>
+                        <img src="./pump.png" alt="pump Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
                         <a href="./pump.usdz" download="pump.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
                             pump.usdz
                         </a>
@@ -140,7 +140,7 @@
                         <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
                     </li>
                     <li class="file-item">
-                        <div class="thumbnail-placeholder w-16 h-16 text-gray-500 rounded-md flex-shrink-0">📦</div>
+                        <img src="./thetford%20porta%20potti.png" alt="thetford porta potti Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
                         <a href="./thetford%20porta%20potti.usdz" download="thetford porta potti.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
                             thetford porta potti.usdz
                         </a>
