--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
                 </p>
                 <ul class="space-y-3">
                     <li class="file-item">
+                        <img src="./59CB38E5-216E-4BE0-ADC1-9EED879E5C22.png" alt="59CB38E5-216E-4BE0-ADC1-9EED879E5C22 Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
+                        <a href="./59CB38E5-216E-4BE0-ADC1-9EED879E5C22.usdz" download="59CB38E5-216E-4BE0-ADC1-9EED879E5C22.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
+                            59CB38E5-216E-4BE0-ADC1-9EED879E5C22.usdz
+                        </a>
+                        <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
+                    </li>
+                    <li class="file-item">
                         <img src="./6BFCC4DD-AF88-4B94-BEB8-5BD851C4E30C.png" alt="6BFCC4DD-AF88-4B94-BEB8-5BD851C4E30C Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
                         <a href="./6BFCC4DD-AF88-4B94-BEB8-5BD851C4E30C.usdz" download="6BFCC4DD-AF88-4B94-BEB8-5BD851C4E30C.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
                             6BFCC4DD-AF88-4B94-BEB8-5BD851C4E30C.usdz
@@ -133,6 +140,27 @@
                         <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
                     </li>
                     <li class="file-item">
+                        <img src="./R%20w67b%20106%20all%20w%20walls%202.png" alt="R w67b 106 all w walls 2 Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
+                        <a href="./R%20w67b%20106%20all%20w%20walls%202.usdz" download="R w67b 106 all w walls 2.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
+                            R w67b 106 all w walls 2.usdz
+                        </a>
+                        <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
+                    </li>
+                    <li class="file-item">
+                        <img src="./R%20w67b%20106%20all%20w%20walls%20and%20me%202.png" alt="R w67b 106 all w walls and me 2 Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
+                        <a href="./R%20w67b%20106%20all%20w%20walls%20and%20me%202.usdz" download="R w67b 106 all w walls and me 2.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
+                            R w67b 106 all w walls and me 2.usdz
+                        </a>
+                        <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
+                    </li>
+                    <li class="file-item">
+                        <img src="./R%20w67b%20106%20bed%20and%20me.png" alt="R w67b 106 bed and me Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
+                        <a href="./R%20w67b%20106%20bed%20and%20me.usdz" download="R w67b 106 bed and me.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
+                            R w67b 106 bed and me.usdz
+                        </a>
+                        <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
+                    </li>
+                    <li class="file-item">
                         <img src="./tank2.png" alt="tank2 Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
                         <a href="./tank2.usdz" download="tank2.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
                             tank2.usdz
@@ -171,6 +199,48 @@
                         <img src="./w67b%20106%20bed%20and%20me.png" alt="w67b 106 bed and me Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
                         <a href="./w67b%20106%20bed%20and%20me.usdz" download="w67b 106 bed and me.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
                             w67b 106 bed and me.usdz
+                        </a>
+                        <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
+                    </li>
+                    <li class="file-item">
+                        <img src="./w67b%20bed%20porta%20me.png" alt="w67b bed porta me Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
+                        <a href="./w67b%20bed%20porta%20me.usdz" download="w67b bed porta me.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
+                            w67b bed porta me.usdz
+                        </a>
+                        <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
+                    </li>
+                    <li class="file-item">
+                        <img src="./w67b%20bed%20porta%20walls%20me.png" alt="w67b bed porta walls me Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
+                        <a href="./w67b%20bed%20porta%20walls%20me.usdz" download="w67b bed porta walls me.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
+                            w67b bed porta walls me.usdz
+                        </a>
+                        <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
+                    </li>
+                    <li class="file-item">
+                        <img src="./w67b%20porta%20me.png" alt="w67b porta me Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
+                        <a href="./w67b%20porta%20me.usdz" download="w67b porta me.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
+                            w67b porta me.usdz
+                        </a>
+                        <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
+                    </li>
+                    <li class="file-item">
+                        <img src="./w67b%20porta.png" alt="w67b porta Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
+                        <a href="./w67b%20porta.usdz" download="w67b porta.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
+                            w67b porta.usdz
+                        </a>
+                        <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
+                    </li>
+                    <li class="file-item">
+                        <img src="./w67b%20tanks.png" alt="w67b tanks Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
+                        <a href="./w67b%20tanks.usdz" download="w67b tanks.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
+                            w67b tanks.usdz
+                        </a>
+                        <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
+                    </li>
+                    <li class="file-item">
+                        <img src="./w67b%20tanks2.png" alt="w67b tanks2 Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
+                        <a href="./w67b%20tanks2.usdz" download="w67b tanks2.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
+                            w67b tanks2.usdz
                         </a>
                         <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
                     </li>
