--- a/index.html
+++ b/index.html
@@ -161,6 +161,27 @@
                         <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
                     </li>
                     <li class="file-item">
+                        <img src="./SceneTestWallMountPump.png" alt="SceneTestWallMountPump Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
+                        <a href="./SceneTestWallMountPump.usdz" download="SceneTestWallMountPump.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
+                            SceneTestWallMountPump.usdz
+                        </a>
+                        <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
+                    </li>
+                    <li class="file-item">
+                        <img src="./SceneTestWallMountPump2.png" alt="SceneTestWallMountPump2 Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
+                        <a href="./SceneTestWallMountPump2.usdz" download="SceneTestWallMountPump2.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
+                            SceneTestWallMountPump2.usdz
+                        </a>
+                        <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
+                    </li>
+                    <li class="file-item">
+                        <img src="./SceneTestWallMountPump3.png" alt="SceneTestWallMountPump3 Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
+                        <a href="./SceneTestWallMountPump3.usdz" download="SceneTestWallMountPump3.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
+                            SceneTestWallMountPump3.usdz
+                        </a>
+                        <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
+                    </li>
+                    <li class="file-item">
                         <img src="./tank2.png" alt="tank2 Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
                         <a href="./tank2.usdz" download="tank2.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
                             tank2.usdz
