--- a/index.html
+++ b/index.html
@@ -133,6 +133,13 @@
                         <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
                     </li>
                     <li class="file-item">
+                        <img src="./pppump.png" alt="pppump Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
+                        <a href="./pppump.usdz" download="pppump.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
+                            pppump.usdz
+                        </a>
+                        <svg class="w-5 h-5 text-blue-500 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
+                    </li>
+                    <li class="file-item">
                         <img src="./ppump.png" alt="ppump Thumbnail" class="w-16 h-16 object-cover rounded-md flex-shrink-0">
                         <a href="./ppump.usdz" download="ppump.usdz" class="text-blue-600 hover:text-blue-800 font-semibold text-lg transition duration-300 ease-in-out transform hover:scale-105 flex-grow">
                             ppump.usdz
